--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "^2.1.5"
-  },
-  "dependencies": {
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "react-scripts": "^3.0.1",
+    "react-test-renderer": "^16.7.0",
+    "typescript": "^3.5.2"
+  },
+  "dependencies": {
     "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-test-renderer": "^16.7.0"
+    "react-dom": "^16.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
