--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "4.0.3",
     "react-test-renderer": "^16.12.0",
     "typescript": "^3.7.5"
   },
